# raggy

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  404.html  LICENSE  Makefile  README.md  hooks.py  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: publish-docs.yml  publish-pypi.yml  static-analysis.yml
api_reference/: index.html
api_reference/loaders/base/: index.html
api_reference/loaders/github/: index.html
api_reference/loaders/pdf/: index.html
api_reference/loaders/web/: index.html
api_reference/settings/: index.html
api_reference/utilities/asyncutils/: index.html
api_reference/utilities/collections/: index.html
api_reference/utilities/embeddings/: index.html
api_reference/utilities/filesystem/: index.html
api_reference/utilities/ids/: index.html
api_reference/utilities/logging/: index.html
api_reference/utilities/text/: index.html
api_reference/vectorstores/base/: index.html
api_reference/vectorstores/chroma/: index.html
api_reference/vectorstores/tpuf/: index.html
contributing/: index.html
docs/: contributing.md  hooks.py  index.md  ingest_strategy.md
docs/api_reference/: index.md  settings.md
docs/api_reference/loaders/: base.md  github.md  pdf.md  web.md
docs/api_reference/utilities/: asyncutils.md  collections.md  embeddings.md  filesystem.md  ids.md  logging.md  text.md
docs/api_reference/vectorstores/: base.md  chroma.md  tpuf.md
docs/examples/: index.md
docs/welcome/: installation.md  tutorial.md
examples/: demo_tpuf.py  index.html  reddit_thread.py  scrape_sitemap.py
examples/chat_with_X/: repo.py  requirements.txt  website.py
examples/prefect_docs_mcp/: README.md  dashboard_queries.sql  prefect_docs.fastmcp.json  pyproject.toml  refresh_namespace.py  run_client_demo.py
examples/prefect_docs_mcp/src/prefect_docs_mcp/: __init__.py  __main__.py  metrics.py  server.py  settings.py
examples/prefect_docs_mcp/src/prefect_docs_mcp/_internal/: __init__.py  tpuf.py
examples/refresh_chroma/: main.py  refresh_collection.py  requirements.txt
examples/refresh_tpuf/: refresh_namespace.py  requirements.txt
examples/refresh_vectorstore/: chroma_collection.py  refresh_chroma.py  refresh_tpuf.py  tpuf_namespace.py
ingest_strategy/: index.html
overrides/: main.html
search/: search_index.json
src/raggy/: __init__.py  _version.py  documents.py  settings.py  utils.py
src/raggy/cli/: __init__.py
src/raggy/loaders/: __init__.py  base.py  github.py  pdf.py  web.py
src/raggy/utilities/: asyncutils.py  collections.py  embeddings.py  filesystem.py  ids.py  logging.py  text.py
src/raggy/vectorstores/: __init__.py  base.py  chroma.py  tpuf.py
tests/loaders/: test_excerpt_template.py
welcome/installation/: index.html
welcome/tutorial/: index.html
