[project]
name = "raggy"
dynamic = ["version"]
description = "scraping stuff"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["scraping", "nlp", "ai", "document-processing"]
requires-python = ">=3.11"
dependencies = [
    "marvin",
    "bs4",
    "fake-useragent",
    "pypdf",
    "aiofiles",
    "chardet",
    "xxhash",
    "yake",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "pre-commit>=2.21,<4.0",
    "pydantic[dotenv]",
    "ruff",
]

chroma = ["chromadb"]
tpuf = ["turbopuffer"]

[project.urls]
Code = "https://github.com/zzstoatzz/raggy"


[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/raggy/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

norecursedirs = [
    "*.egg-info",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
    "node_modules",
]

asyncio_mode = 'auto'

filterwarnings = [
    "ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
]
env = ['PYTEST_TIMEOUT=20']

[tool.ruff]
extend-select = ["I"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$" # default, but here in case we want to change it

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.per-file-ignores]
"__init__.py" = ['I', 'F401', 'E402']
"conftest.py" = ["F401", "F403"]
'tests/fixtures/*.py' = ['F403']