[project]
name = "raggy"
dynamic = ["version"]
description = "scraping stuff"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["scraping", "nlp", "ai", "document-processing"]
requires-python = ">=3.10"
dependencies = [
    "aiofiles",
    "bs4",
    "chardet",
    "fake-useragent",
    "gh-util",
    "openai>1.0.0",
    "pypdf",
    "tenacity",
    "tiktoken",
    "xxhash",
    "yake",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "mkdocs-autolinks-plugin~=0.7",
    "mkdocs-awesome-pages-plugin~=2.8",
    "mkdocs-markdownextradata-plugin~=0.2",
    "mkdocs-material[imaging]>=9.1.17",
    "mkdocstrings[python]~=0.22",
    "mypy",
    "pre-commit>=2.21,<4.0",
    "ruff",
    "types-aiofiles",
    "raggy[tests]",
]

tests = [
    "pytest-asyncio>=0.18.2,!=0.22.0,<0.23.0",
    "pytest-env>=0.8,<2.0",
    "pytest-rerunfailures>=10,<14",
    "pytest-sugar>=0.9,<2.0",
    "pytest~=7.3.1",
    "pytest-timeout",
    "pytest-xdist",
]

chroma = ["chromadb"]
tpuf = ["turbopuffer"]
pdf = ["pypdf"]

[project.scripts]
raggy = "raggy.cli:app"

[project.urls]
Code = "https://github.com/zzstoatzz/raggy"


[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

norecursedirs = [
    "*.egg-info",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
    "node_modules",
]

asyncio_mode = 'auto'

filterwarnings = [
    "ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
]
env = ['D:RAGGY_LOG_VERBOSE=1', 'D:RAGGY_LOG_LEVEL=DEBUG', 'PYTEST_TIMEOUT=20']

[tool.ruff]
extend-select = ["I"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$" # default, but here in case we want to change it

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.per-file-ignores]
"__init__.py" = ['I', 'F401', 'E402']
"conftest.py" = ["F401", "F403"]
'tests/fixtures/*.py' = ['F403']

[tool.setuptools_scm]
write_to = "src/raggy/_version.py"
