[project]
name = "prefect-docs-mcp"
version = "0.1.0"
description = "FastMCP server that exposes Prefect documentation search via Raggy."
readme = "README.md"
authors = [{ name = "Prefect Labs" }]
requires-python = ">=3.10"
dependencies = [
    "fastmcp@git+https://github.com/jlowin/fastmcp.git@main",
    "logfire",
    "pydantic-settings>=2.2.1",
    "raggy[tpuf]@git+https://github.com/zzstoatzz/raggy.git",
]

[project.scripts]
prefect-docs-mcp = "prefect_docs_mcp.__main__:main"

[dependency-groups]
dev = ["ruff", "ipython"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
